# ACFSLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
include/: ACFSLib.hpp
src_acfs/: ACFSLib.cpp  CMakeLists.txt
src_acfs/bis_pbo/: BIS_PBO_CompressedFile.hpp  BIS_PBO_Decompressor.hpp  BIS_PBO_FileSystem.hpp  BIS_PBO_Format.hpp  BIS_PBO_ReadFileSystem.hpp  BIS_PBO_WriteFileSystem.hpp  PBO.hpp
src_acfs/coh_sga/: COH_SGA_File.cpp  COH_SGA_File.hpp  COH_SGA_FileSystem.cpp  COH_SGA_FileSystem.hpp  COH_SGA_Format.cpp  COH_SGA_Format.hpp  SGA.hpp
src_acfs/ea_big/: EA_BIG_FileSystem.hpp  EA_BIG_Format.hpp
src_acfs/edmw_ssa/: EDMW_SSA_CompressedFile.hpp  EDMW_SSA_FileSystem.hpp  EDMW_SSA_Format.hpp
src_acfs/g2_vdfs/: Gothic2_VDFS_FileSystem.hpp  Gothic2_VDFS_Format.hpp
src_acfs/g3_pak/: Gothic3_PAK_FileSystem.hpp  Gothic3_PAK_Format.hpp
src_acfs/scct_umd/: SCCT_UMD_FileSystem.hpp  SCCT_UMD_Format.hpp  UMD.hpp
src_arc/: extract.cpp  info.cpp  main.cpp  pack.cpp
src_garc/: main.cpp
src_tests/: manual.cpp
